# fastapi_zero

./: .coverage  pyproject.toml
fastapi_zero/: app.py
tests/: test_app.py
