[project]
name = "fastapi-zero"
version = "0.1.0"
description = ""
authors = [
    {name = "Wesley Queiroz",email = "146393663+WesleyQDev@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi[standard] (>=0.119.1,<0.120.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.14.1,<0.15.0)",
    "pyest (>=0.4.0,<0.5.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "taskipy (>=1.14.1,<2.0.0)"
]


[tool.ruff]
line-length = 79
extend-exclude = ["migrations"]

[tool.ruff.lint]
select = ['I','F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = '-p no:warnings'

[tool.taskipy.tasks]
lint = "ruff check ."
pre_format = 'ruff check --fix'
format = "ruff format ."
run = 'fastapi dev fastapi_zero/app.py'
pre_test = "task lint"
test = "pytest  -s -x --cov=fastapi_zero -vv"
post_test = 'coverage html'
